tests/snapshots/options__opt_multiline_scroll_incr.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"  k1                                                                            "
"  k2                                                                            "
"  j1                                                                            "
"  j2                                                                            "
"  i1                                                                            "
"  i2                                                                            "
"  h1                                                                            "
"  h2                                                                            "
"  g1                                                                            "
"  g2                                                                            "
"  f1                                                                            "
"  f2                                                                            "
"  e1                                                                            "
"  e2                                                                            "
"  d1                                                                            "
"  d2                                                                            "
"  c1                                                                            "
"  c2                                                                            "
"  b1                                                                            "
"  b2                                                                            "
"> a1                                                                            "
"  a2                                                                            "
"  15/15                                                                      0/0"
">                                                                               "
cursor: (24, 3)
