tests/snapshots/options__opt_multiline_scroll_incr@001.snap
---
source: tests/options.rs
description: "input: items [\"a1\\\\na2\", \"b1\\\\nb2\", \"c1\\\\nc2\", \"d1\\\\nd2\", \"e1\\\\ne2\", \"f1\\\\nf2\", \"g1\\\\ng2\",\n\"h1\\\\nh2\", \"i1\\\\ni2\", \"j1\\\\nj2\", \"k1\\\\nk2\", \"l1\\\\nl2\", \"m1\\\\nm2\", \"n1\\\\nn2\",\n\"o1\\\\no2\"]\noptions: --multiline"
---
"  k1                                                                            "
"  k2                                                                            "
"  j1                                                                            "
"  j2                                                                            "
"  i1                                                                            "
"  i2                                                                            "
"  h1                                                                            "
"  h2                                                                            "
"  g1                                                                            "
"  g2                                                                            "
"  f1                                                                            "
"  f2                                                                            "
"  e1                                                                            "
"  e2                                                                            "
"  d1                                                                            "
"  d2                                                                            "
"  c1                                                                            "
"  c2                                                                            "
"  b1                                                                            "
"  b2                                                                            "
"> a1                                                                            "
"  a2                                                                            "
"  15/15                                                                      0/0"
">                                                                               "
cursor: (24, 3)
