tests/snapshots/options__opt_multiple_flags_cmd_prompt@001.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --cmd-prompt a --cmd-prompt c --cmd echo"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
"  1/1                                                                        0/0"
"c                                                                               "
cursor: (24, 2)
