tests/snapshots/options__opt_multiple_flags_cmd_query@001.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --cmd-query a --cmd-query b --cmd echo"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
">                                                                               "
"  1/1                                                                        0/0"
"c> b                                                                            "
cursor: (24, 5)
