tests/snapshots/options__opt_multiple_flags_combined_nth@001.snap
---
source: tests/options.rs
description: "input: items [\"a b c\", \"d e f\"]\noptions: --nth 1,2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d e f                                                                         "
"> a b c                                                                         "
"  2/2                                                                        0/0"
">                                                                               "
cursor: (24, 3)
